--- a/drones/.gitignore
+++ b/drones/.gitignore
@@ -10,3 +10,12 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
