--- a/drones/public/configApp/CarrierConfig.ini
+++ b/drones/public/configApp/CarrierConfig.ini
@@ -1,22 +1,25 @@
-; This is a sample configuration file
-; Comments start with ';', as in php.ini
+; carriers configs
 
+;price per carrier
 carrierPrice = 1
 
+; product transport type
 [types]
 hot = 2
 normal = 1
 cold = 3
 
-[second_section]
-path = "/usr/local/bin"
-URL = "http://www.example.com/~username"
+; normal carrier's format
+[normal]
+lines = 3
+columns = 4
 
-[third_section]
-phpversion[] = "5.0"
-phpversion[] = "5.1"
-phpversion[] = "5.2"
-phpversion[] = "5.3"
+; big carrier's format
+[normal]
+lines = 4
+columns = 5
 
-urls[svn] = "http://svn.php.net"
-urls[git] = "http://git.php.net"
+; small carrier's format
+[normal]
+lines = 2
+columns = 3
