--- a/drones/composer.json
+++ b/drones/composer.json
@@ -22,7 +22,8 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+			"database/foundation"
         ],
         "psr-4": {
             "App\\": "app/"
