--- a/drones/package.json
+++ b/drones/package.json
@@ -17,5 +17,10 @@
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "font-awesome": "^4.7.0",
+    "morris.js.so": "^0.5.1",
+    "raphael": "^2.2.7"
   }
 }
