--- a/drones/public/mix-manifest.json
+++ b/drones/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/all/_bootstrap.css": "/css/all/_bootstrap.css",
-    "/css/all.css": "/css/all.css"
+    "/css/bootstrap.css": "/css/bootstrap.css",
+    "/css/app.css": "/css/app.css"
 }
